# raytracer_rs

./: Cargo.toml  README.md  build.rs  scene.json
assets/: scene.json
proto/: raytracer.proto
renderer/: ppm.rs  renderer.rs  scene.rs
src/: camera.rs  client.rs  geometry.rs  light.rs  main.rs  material.rs  ppm.rs  raycast.rs  scene.rs  server.rs  vec3f.rs
viewer/: viewer.rs
